// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Supplicate (Approved-only flow) Bypass guard via direct token movement (reserves authoritative) ERC20.transfer and transferFrom into pool address do NOT update pool reserves 1`] = `
Object {
  "note": "Raw token transfers cannot spoof/mutate LPP reserves",
  "reservesAfter": Object {
    "a": "100000000000000000000",
    "u": "100000000000000000000",
  },
  "reservesBefore": Object {
    "a": "100000000000000000000",
    "u": "100000000000000000000",
  },
}
`;

exports[`Supplicate (Approved-only flow) Snapshots & sqrt pricing (U->A path) captures sqrtPriceX96 movement and reserve deltas for USDC->ASSET 1`] = `
Object {
  "amountIn": "1000000000000000000",
  "caller": Object {
    "after": Object {
      "a": "990099009900990099",
      "u": "0",
    },
    "before": Object {
      "a": "0",
      "u": "1000000000000000000",
    },
  },
  "direction": "USDC->ASSET",
  "poolQuote": "990099009900990099",
  "reserves": Object {
    "after": Object {
      "a": "99009900990099009901",
      "u": "101000000000000000000",
    },
    "before": Object {
      "a": "100000000000000000000",
      "u": "100000000000000000000",
    },
  },
  "sqrtPriceX96": Object {
    "implied": Object {
      "after": "80020444139406980969475388817",
      "before": "79228162514264337593543950336",
    },
    "stored": Object {
      "after": "79228162514264337593543950336",
      "before": "79228162514264337593543950336",
    },
  },
}
`;

exports[`Supplicate (Approved-only flow) Treasury-approved address executes single-pool rebalance A->U 1`] = `
Object {
  "amountIn": "1000000000000000000",
  "callerBalances": Object {
    "after": Object {
      "a": "0",
      "u": "990099009900990099",
    },
    "before": Object {
      "a": "1000000000000000000",
      "u": "0",
    },
  },
  "direction": "ASSET->USDC",
  "quotes": Object {
    "poolQuote": "990099009900990099",
    "routerStatic": "990099009900990099",
  },
  "reserves": Object {
    "after": Object {
      "a": "101000000000000000000",
      "u": "99009900990099009901",
    },
    "before": Object {
      "a": "100000000000000000000",
      "u": "100000000000000000000",
    },
  },
  "sqrtPriceX96": Object {
    "implied": Object {
      "after": "78443725261647859003512783905",
      "before": "79228162514264337593543950336",
    },
    "stored": Object {
      "after": "79228162514264337593543950336",
      "before": "79228162514264337593543950336",
    },
  },
}
`;
